Update ToggleableDialog.java